--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -20,7 +20,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="63"/>
+      <BuildNr Value="64"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
     <BuildModes Count="4" Active="Debug32">
@@ -149,11 +149,11 @@
         <PackageName Value="LCL"/>
       </Item5>
     </RequiredPackages>
-    <Units Count="48">
+    <Units Count="50">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
-        <CursorPos X="72" Y="17"/>
+        <CursorPos Y="9"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -175,9 +175,10 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <EditorIndex Value="13"/>
-        <TopLine Value="125"/>
-        <CursorPos X="14" Y="141"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="11"/>
+        <TopLine Value="330"/>
+        <CursorPos Y="347"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -192,10 +193,9 @@
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="4"/>
-        <TopLine Value="1287"/>
-        <CursorPos X="5" Y="1305"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="2356"/>
+        <CursorPos X="27" Y="2358"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -211,8 +211,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
         <EditorIndex Value="20"/>
-        <TopLine Value="565"/>
-        <CursorPos X="83" Y="581"/>
+        <TopLine Value="468"/>
+        <CursorPos X="7" Y="485"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit4>
@@ -244,7 +244,6 @@
       </Unit6>
       <Unit7>
         <Filename Value="rtfedit.pas"/>
-        <IsPartOfProject Value="True"/>
         <UnitName Value="RTFEdit"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="85"/>
@@ -258,8 +257,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="22"/>
-        <TopLine Value="171"/>
-        <CursorPos X="42" Y="190"/>
+        <TopLine Value="115"/>
+        <CursorPos X="6" Y="120"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -289,8 +288,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="15"/>
-        <TopLine Value="44"/>
-        <CursorPos Y="19"/>
+        <TopLine Value="167"/>
+        <CursorPos X="43" Y="175"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -299,9 +298,9 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="12"/>
-        <TopLine Value="155"/>
-        <CursorPos Y="156"/>
+        <EditorIndex Value="10"/>
+        <TopLine Value="270"/>
+        <CursorPos X="24" Y="299"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
       </Unit12>
@@ -312,7 +311,6 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
         <TopLine Value="17"/>
         <CursorPos X="3" Y="30"/>
         <UsageCount Value="213"/>
@@ -334,8 +332,8 @@
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="28"/>
-        <TopLine Value="147"/>
-        <CursorPos Y="164"/>
+        <TopLine Value="101"/>
+        <CursorPos X="30" Y="118"/>
         <UsageCount Value="232"/>
         <Loaded Value="True"/>
       </Unit15>
@@ -354,8 +352,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTTokenizer"/>
         <EditorIndex Value="25"/>
-        <TopLine Value="271"/>
-        <CursorPos X="9" Y="295"/>
+        <TopLine Value="177"/>
+        <CursorPos X="42" Y="195"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit17>
@@ -364,8 +362,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTParser"/>
         <EditorIndex Value="23"/>
-        <TopLine Value="7"/>
-        <CursorPos Y="67"/>
+        <TopLine Value="23"/>
+        <CursorPos X="36" Y="41"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit18>
@@ -374,8 +372,8 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
         <EditorIndex Value="14"/>
-        <TopLine Value="524"/>
-        <CursorPos X="3" Y="528"/>
+        <TopLine Value="384"/>
+        <CursorPos Y="395"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit19>
@@ -414,15 +412,14 @@
       <Unit23>
         <Filename Value="chapterview.pas"/>
         <UnitName Value="ChapterView"/>
-        <EditorIndex Value="5"/>
-        <TopLine Value="3"/>
-        <CursorPos X="21" Y="28"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="225"/>
+        <CursorPos X="67" Y="244"/>
         <UsageCount Value="180"/>
         <Loaded Value="True"/>
       </Unit23>
       <Unit24>
         <Filename Value="kchapterview.pas"/>
-        <IsPartOfProject Value="True"/>
         <UnitName Value="KChapterView"/>
         <EditorIndex Value="-1"/>
         <TopLine Value="144"/>
@@ -470,9 +467,9 @@
       <Unit30>
         <Filename Value="theworddictionary.pas"/>
         <UnitName Value="TheWordDictionary"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="227"/>
-        <CursorPos X="46" Y="243"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="264"/>
+        <CursorPos X="6" Y="287"/>
         <UsageCount Value="256"/>
         <Loaded Value="True"/>
       </Unit30>
@@ -502,10 +499,9 @@
       <Unit34>
         <Filename Value="include\bookdefs.inc"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="170"/>
+        <EditorIndex Value="8"/>
         <CursorPos Y="69"/>
-        <UsageCount Value="78"/>
+        <UsageCount Value="82"/>
         <Loaded Value="True"/>
       </Unit34>
       <Unit35>
@@ -513,20 +509,19 @@
         <ComponentName Value="FormExportPatch"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="101"/>
-        <CursorPos Y="59"/>
-        <UsageCount Value="38"/>
+        <CursorPos X="19" Y="116"/>
+        <UsageCount Value="40"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit35>
       <Unit36>
         <Filename Value="include\bibletreeview.pas"/>
-        <IsPartOfProject Value="True"/>
         <UnitName Value="BibleTreeView"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="19"/>
-        <UsageCount Value="71"/>
+        <UsageCount Value="73"/>
       </Unit36>
       <Unit37>
         <Filename Value="C:\tools\lazarus\lcl\comctrls.pp"/>
@@ -539,21 +534,22 @@
       <Unit38>
         <Filename Value="bibletreeview.pas"/>
         <UnitName Value="BibleTreeView"/>
-        <EditorIndex Value="6"/>
-        <TopLine Value="110"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="288"/>
         <CursorPos X="3" Y="75"/>
-        <UsageCount Value="35"/>
+        <UsageCount Value="37"/>
         <Loaded Value="True"/>
       </Unit38>
       <Unit39>
         <Filename Value="formapplypatch.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="FrmApplyPatch"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="8"/>
-        <TopLine Value="98"/>
-        <CursorPos X="7" Y="119"/>
-        <UsageCount Value="70"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="127"/>
+        <CursorPos X="23" Y="9"/>
+        <UsageCount Value="74"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit39>
@@ -561,10 +557,10 @@
         <Filename Value="patchfile.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="PatchFile"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="111"/>
-        <CursorPos Y="139"/>
-        <UsageCount Value="70"/>
+        <CursorPos X="17" Y="75"/>
+        <UsageCount Value="74"/>
         <Loaded Value="True"/>
       </Unit40>
       <Unit41>
@@ -605,135 +601,157 @@
       <Unit46>
         <Filename Value="C:\tools\lazarus\lcl\forms.pp"/>
         <UnitName Value="Forms"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="1144"/>
         <CursorPos X="14" Y="1161"/>
-        <UsageCount Value="22"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="23"/>
       </Unit46>
       <Unit47>
         <Filename Value="C:\tools\lazarus\lcl\controls.pp"/>
         <UnitName Value="Controls"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="183"/>
         <CursorPos X="12" Y="196"/>
-        <UsageCount Value="22"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="23"/>
       </Unit47>
+      <Unit48>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\sysutils\syshelph.inc"/>
+        <EditorIndex Value="12"/>
+        <TopLine Value="158"/>
+        <CursorPos X="15" Y="173"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit48>
+      <Unit49>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\sysutils\syshelp.inc"/>
+        <EditorIndex Value="13"/>
+        <TopLine Value="1446"/>
+        <CursorPos X="3" Y="1452"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit49>
     </Units>
-    <JumpHistory Count="28" HistoryIndex="27">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="548" Column="35" TopLine="524"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="188" Column="15" TopLine="172"/>
       </Position1>
       <Position2>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="494" Column="34" TopLine="470"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="193" Column="15" TopLine="172"/>
       </Position2>
       <Position3>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="187" Column="15" TopLine="170"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="361" TopLine="335"/>
       </Position3>
       <Position4>
-        <Filename Value="patchfile.pas"/>
-        <Caret Line="151" TopLine="118"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="351" TopLine="334"/>
       </Position4>
       <Position5>
-        <Filename Value="patchfile.pas"/>
-        <Caret Line="8" Column="37"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="19" Column="5"/>
       </Position5>
       <Position6>
-        <Filename Value="patchfile.pas"/>
-        <Caret Line="143" Column="9" TopLine="123"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="42" Column="15" TopLine="25"/>
       </Position6>
       <Position7>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="57" Column="18" TopLine="41"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2358" Column="27" TopLine="2356"/>
       </Position7>
       <Position8>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="28" Column="14" TopLine="10"/>
+        <Filename Value="exportarprojeto.pas"/>
+        <Caret Line="70" Column="65" TopLine="52"/>
       </Position8>
       <Position9>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="494" Column="34" TopLine="470"/>
+        <Filename Value="exportarprojeto.pas"/>
+        <Caret Line="188" Column="54" TopLine="159"/>
       </Position9>
       <Position10>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="130" Column="15" TopLine="113"/>
+        <Filename Value="exportarprojeto.pas"/>
+        <Caret Line="274" Column="13" TopLine="257"/>
       </Position10>
       <Position11>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="344" Column="3" TopLine="338"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="355" TopLine="336"/>
       </Position11>
       <Position12>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="135" Column="15" TopLine="118"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="356" TopLine="336"/>
       </Position12>
       <Position13>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="408" Column="22" TopLine="381"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="357" TopLine="336"/>
       </Position13>
       <Position14>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="32" Column="15" TopLine="14"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="358" TopLine="336"/>
       </Position14>
       <Position15>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="59" TopLine="47"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="352" TopLine="336"/>
       </Position15>
       <Position16>
-        <Filename Value="patchfile.pas"/>
-        <Caret Line="28" Column="37" TopLine="9"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="354" TopLine="336"/>
       </Position16>
       <Position17>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="408" Column="22" TopLine="381"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="352" TopLine="336"/>
       </Position17>
       <Position18>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="406" TopLine="382"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="354" TopLine="336"/>
       </Position18>
       <Position19>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="405" TopLine="381"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="352" TopLine="336"/>
       </Position19>
       <Position20>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="408" Column="22" TopLine="381"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="362" Column="25" TopLine="336"/>
       </Position20>
       <Position21>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="411" TopLine="381"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="360" TopLine="336"/>
       </Position21>
       <Position22>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="130" Column="15" TopLine="113"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="356" TopLine="336"/>
       </Position22>
       <Position23>
-        <Filename Value="formpropprojeto.pas"/>
-        <Caret Line="160" Column="24" TopLine="149"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="352" TopLine="336"/>
       </Position23>
       <Position24>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="59" TopLine="47"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="354" TopLine="336"/>
       </Position24>
       <Position25>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="25" Column="15" TopLine="7"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="352" TopLine="336"/>
       </Position25>
       <Position26>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="114" Column="47" TopLine="96"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="354" TopLine="336"/>
       </Position26>
       <Position27>
-        <Filename Value="formexportpatch.pas"/>
-        <Caret Line="57" Column="24" TopLine="53"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="352" TopLine="336"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="195" Column="15" TopLine="180"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="358" TopLine="336"/>
       </Position28>
+      <Position29>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="360" TopLine="336"/>
+      </Position29>
+      <Position30>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="361" TopLine="336"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
